--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -6,6 +6,8 @@ body {
     background-color: #fce6e0;
     max-width: 1000px;
     min-width: 300px;
+    scroll-behavior: smooth;
+    
 }
 .hidden {
     display: none;
