--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,7 +1,11 @@
 
-@import 'modules/_mediaqueries.scss';
+
 @import 'modules/_vars.scss';
 @import 'modules/_main.scss';
+@import 'modules/_main_nav.scss';
+@import 'modules/_mediaqueries.scss';
+@import 'modules/_lightbox.scss';
+@import 'modules/_footer.scss';
 
 
-@import 'modules/_layout.scss';
+
