--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -6,52 +6,48 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 8px;
-    font-size: 10px;
+    font-size: 15px;
     background-color: #edc3ba;
     width: 95%;
     border-radius: 20px;
+
+    h2 {
+        font-weight: bold;
+        margin: 10px;
+    }
     img {
-        width: 12%;
+        width: 10%;
         height: 7%;;
     }
     
 }
-nav {
-    margin: 0;
-    display: grid;
-    grid-template-columns: 150px 150px;
-    justify-content: center;
-    text-transform: bold;
+.someText p {
+    width: 300px;
     text-align: center;
-    .thing-item{
-        
-        list-style-type: none;
-        padding: 15px;
-       
-        
-       img {
-           margin-bottom: 7px;
-           width: 75%;
-           
-       }
-        a{
-        cursor: pointer;
-        text-decoration: none;
-        color: #615e59;
-        font-weight: bold;
-        
-        text-transform: uppercase;
-        
-        }
-        &:hover {
-            a {color: #d3e6e9;}
-        }
-    }
+    margin-left: 40px;
+    margin-top: 20px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
+@media screen and (min-width: $tablet-size) {
+    .info {
+        h2 {
+            font-size: 20px;
+            
+        }
+        img {
+            width: 7%;
+        }
+    }
+    .someText p {
+        width: 500px;
+        margin-left: 100px;
+    }
+    
+}
 
 //Desktop version
-@media screen and (min-width: 938px) {
+@media screen and (min-width: $desktop-size) {
     .pic  {
         
         img {
@@ -60,52 +56,27 @@ nav {
         
     }
     .info {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 10px;
-        font-size: 12px;
-        background-color: #edc3ba;
-        margin-left: 40px;
-        border-radius: 20px;
-        
+        margin-left:30px;
+        width: 100%;
+        h2 {
+            margin-top:20px;
+        }
         img {
+
             margin-top:10px ;
             width: 6%;
             height: 7%;
+           
         }
         
     }
-    nav {
-        margin: 0;
-        display: flex;
-        flex-direction: row;
-        text-transform: bold;
-        text-align: center;
-        
-        .thing-item{
-            
-            list-style-type: none;
-            padding: 10px;
-            
-            margin-top: 20px;
-            margin-left: 80px;
-           img {
-               margin-bottom: 15px;
-               width: 80%;
-           }
-            a {
-            cursor: pointer;
-            text-decoration: none;
-            color: #615e59;
-            font-weight: bold;
-            font-size: 17px;
-            text-transform: uppercase;
-            
-            }
-            &:hover {
-                a {color: #d3e6e9;}
-            }
-        }
+   
+    .someText p {
+        margin-left: 300px;
     }
+    
+    
+            
+        
+    
 }
