--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -1,3 +1,8 @@
 $main-font-family: 'Arial', 'helvetica', sans-serif;
 $main-font-size: 16px;
 $main-text-color: #615e59;
+
+//mediaqueries
+$desktop-size: 1024px;
+$tablet-size: 670px;
+
